--- a/tags.css
+++ b/tags.css
@@ -1,99 +1,131 @@
 :root {
-    font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 body{
-  width: 800px;
+width: 800px;
 }
 
 .tag-container {
-    border: 1px solid #333;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  padding: 6px 10px;
 }
 
 .tag-container .tag {
-    font-size: 85%;
-    padding: 0.5em 0.75em;
-    margin: 0.25em 0.1em;
-    display: inline-block;
-    background-color: #ddd;
-    transition: all 0.1s linear;
-    cursor: pointer;
+  font-size: 85%;
+  font-weight: 600;
+  padding: 0.5em 0.75em;
+  /* margin: 0.25em 0.1em; */
+  display: inline-block;
+  background-color: #ddd;
+  transition: all 0.1s linear;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-right: 10px;
 }
 
 .tag-container .tag:hover {
-    background-color: #3af;
-    color: white;
+  background-color: #3af;
+  color: white;
 }
 
 .tag-container .tag .close::after {
-    content: '×';
-    font-weight: bold;
-    display: inline-block;
-    transform: scale(1.4);
-    margin-left: 0.75em;
+  content: '×';
+  font-weight: bold;
+  display: inline-block;
+  transform: scale(1.4);
+  margin-left: 0.75em;
 }
 
 .tag-container .tag .close:hover::after {
-    color: red;
+  color: #ffffff;
 }
 
 .tag-container .main-input {
-    border: 0;
-    outline: 0;
-    margin: 10px 2px;
-    width: 20%;
-    font-size: 15px;
+  border: 0;
+  outline: 0;
+  margin: 6px 2px;
+  width: 100%;
+  font-size: 15px;
+  padding-left: 20px;
 }
 
 
 #selected-list {
-    width: 800px;
-    word-break: break-word;
-    white-space: normal;
-    position: absolute;
+  width: 800px;
+  word-break: break-word;
+  white-space: normal;
+  position: absolute;
 }
 #autocomplete-list{
-    width: 300px;
-    position: relative;
+  width: 300px;
 }
 
 
 
 /* ========================================= */
 * {
-    box-sizing: border-box;
-  }
-  
-  /*the container must be positioned relative:*/
-  #autocomplete {
-    position: relative;
-  }
-  
-  .autocomplete-items {
-    position: absolute;
-    border: 1px solid #d4d4d4;
-    border-bottom: none;
-    border-top: none;
-    z-index: 99;
-    /*position the autocomplete items to be the same width as the container:*/
-    top: 100%;
-    left: 0;
-    right: 0;
-  }
-  
-  .autocomplete-items div {
-    padding: 10px;
-    cursor: pointer;
-    background-color: #fff; 
-    border-bottom: 1px solid #d4d4d4; 
-  }
-  
-  /*when hovering an item:*/
-  .autocomplete-items div:hover {
-    background-color: #e9e9e9; 
-  }
-  
-  /*when navigating through the items using the arrow keys:*/
-  .autocomplete-active {
-    background-color: DodgerBlue !important; 
-    color: #ffffff; 
-  }
+  box-sizing: border-box;
+}
+
+/*the container must be positioned relative:*/
+
+#autocomplete-container{
+  position: relative;
+}
+
+
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  /* border-top: none; */
+  z-index: 99;
+  /*position the autocomplete items to be the same width as the container:*/
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff; 
+  border-bottom: 1px solid #d4d4d4; 
+}
+
+/*when hovering an item:*/
+.autocomplete-items div:hover {
+  background-color: #e9e9e9; 
+}
+
+/*when navigating through the items using the arrow keys:*/
+.autocomplete-active {
+  background-color: #e9e9e9 !important; 
+  color: #333333; 
+}
+.input-container{
+  position: relative
+}
+.input-container{
+  display: inline-flex;
+  position: relative;
+}
+.box {
+  width: 12px;
+  height: 10px;
+  background-color: #ddd;
+  color: #fff;
+  position: absolute;
+  top: 11px;
+}
+.box.arrow-right:after {
+  content: " ";
+  position: absolute;
+  right: -5px;
+  top: 0px;
+  border-top: 5px solid transparent;
+  border-right: none;
+  border-left: 5px solid #ddd;
+  border-bottom: 5px solid transparent;
+}
